--- a/index.html
+++ b/index.html
@@ -3,123 +3,231 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nonton</title>
+  <title>Narahentai</title>
   <meta name="theme-color" content="#0b0b0f" />
   <style>
     :root{
-      --bg:#0b0b0f; --card:#12121a; --card2:#151521; --txt:#f3f4ff; --mut:#a6a7c2;
-      --br:18px; --bd:1px solid rgba(255,255,255,.10);
-      --sh: 0 18px 60px rgba(0,0,0,.55);
-      --grad: radial-gradient(1000px 600px at 20% -10%, rgba(95, 66, 255, .30), transparent 55%),
-              radial-gradient(900px 600px at 100% 0%, rgba(0, 200, 255, .16), transparent 55%),
-              radial-gradient(900px 600px at 60% 120%, rgba(255, 77, 180, .12), transparent 60%);
+      --bg:#0b0b0f; --txt:#f3f4ff; --mut:#a6a7c2;
+      --card:rgba(255,255,255,.05); --bd:1px solid rgba(255,255,255,.10);
+      --br:16px;
     }
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu;background:var(--bg);color:var(--txt)}
-    .bg{position:fixed;inset:0;pointer-events:none;background:var(--grad)}
-    .wrap{max-width:1180px;margin:24px auto;padding:0 16px}
-    .top{display:flex;align-items:center;justify-content:space-between;gap:14px}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:40px;height:40px;border-radius:14px;background:
-      linear-gradient(135deg, rgba(95,66,255,.9), rgba(0,200,255,.7));
-      box-shadow:0 12px 30px rgba(95,66,255,.25)}
-    h1{margin:0;font-size:26px;letter-spacing:.2px}
-    .sub{margin:2px 0 0;color:var(--mut);font-size:13px}
-    .actions{display:flex;align-items:center;gap:10px}
-    .pill{display:flex;align-items:center;gap:10px;background:rgba(255,255,255,.05);border:var(--bd);border-radius:999px;padding:10px 12px}
-    .pill input{border:0;outline:0;background:transparent;color:var(--txt);width:min(320px,48vw);font-size:14px}
-    .btn{border:var(--bd);background:rgba(255,255,255,.06);color:var(--txt);padding:10px 12px;border-radius:999px;text-decoration:none;font-size:13px}
-    .btn:hover{background:rgba(255,255,255,.09)}
-    .grid{margin-top:18px;display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:14px}
-    .card{position:relative;display:block;text-decoration:none;color:inherit;border-radius:var(--br);overflow:hidden;
-      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
-      border:var(--bd); box-shadow:0 10px 30px rgba(0,0,0,.25)}
-    .thumb{width:100%;aspect-ratio:16/9;object-fit:cover;display:block;background:#1b1b28}
-    .pad{padding:12px}
-    .title{font-weight:750;line-height:1.25;letter-spacing:.2px}
-    .meta{margin-top:6px;color:var(--mut);font-size:12px;display:flex;justify-content:space-between;gap:10px}
-    .chip{position:absolute;top:10px;left:10px;font-size:11px;padding:6px 10px;border-radius:999px;
-      background:rgba(0,0,0,.45);border:1px solid rgba(255,255,255,.14);backdrop-filter: blur(10px)}
-    .empty{margin-top:18px;color:var(--mut)}
+    a{color:inherit;text-decoration:none}
+    .wrap{max-width:980px;margin:0 auto;padding:10px 12px 24px}
+    /* header kecil */
+    .header{
+      position:sticky; top:0; z-index:10;
+      backdrop-filter: blur(12px);
+      background: linear-gradient(180deg, rgba(11,11,15,.92), rgba(11,11,15,.60));
+      border-bottom: var(--bd);
+    }
+    .bar{display:flex;align-items:center;justify-content:space-between;gap:10px;padding:10px 12px}
+    .brand{display:flex;align-items:center;gap:10px;min-width:0}
+    .logo{
+      width:34px;height:34px;border-radius:12px;flex:0 0 auto;
+      background: linear-gradient(135deg, rgba(255,77,180,.85), rgba(95,66,255,.85));
+      box-shadow: 0 12px 30px rgba(95,66,255,.22);
+      position:relative; overflow:hidden;
+    }
+    /* “anime-ish” shine */
+    .logo:after{
+      content:""; position:absolute; inset:-40%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,.55), transparent);
+      transform: rotate(25deg);
+      animation: shine 3.6s ease-in-out infinite;
+      opacity:.35;
+    }
+    @keyframes shine{ 0%{transform:translateX(-40%) rotate(25deg)} 50%{transform:translateX(40%) rotate(25deg)} 100%{transform:translateX(140%) rotate(25deg)} }
+    .title{font-weight:850;letter-spacing:.2px;font-size:16px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    .right{display:flex;align-items:center;gap:8px}
+    .iconbtn{
+      width:38px;height:38px;border-radius:999px;border:var(--bd);
+      background: rgba(255,255,255,.06);
+      display:grid;place-items:center;cursor:pointer;
+    }
+    .iconbtn:active{transform:scale(.98)}
+    .adminbtn{
+      padding:9px 12px;border-radius:999px;border:var(--bd);
+      background: rgba(255,255,255,.06);font-size:13px;
+    }
+
+    /* search panel anim */
+    .searchWrap{overflow:hidden;max-height:0;transition:max-height .28s ease}
+    .searchWrap.open{max-height:72px}
+    .searchInner{padding:0 12px 12px}
+    .searchBox{
+      display:flex;gap:10px;align-items:center;
+      border:var(--bd); background: rgba(0,0,0,.20);
+      border-radius:999px; padding:10px 12px;
+      transform: translateY(-6px); opacity:0;
+      transition: transform .28s ease, opacity .28s ease;
+    }
+    .searchWrap.open .searchBox{transform: translateY(0); opacity:1}
+    .searchBox input{
+      border:0;outline:0;background:transparent;color:var(--txt);
+      width:100%;font-size:14px;
+    }
+
+    /* grid 2 kolom */
+    .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:12px}
+    @media (max-width:720px){ .grid{grid-template-columns:1fr} }
+    .card{
+      border:var(--bd); background: var(--card);
+      border-radius: var(--br); overflow:hidden;
+      display:flex; flex-direction:column;
+    }
+    .thumb{width:100%;aspect-ratio:16/9;object-fit:cover;background:#1b1b28;display:block}
+    .pad{padding:10px 11px}
+    .ctitle{font-weight:800;line-height:1.25;letter-spacing:.2px}
+    .meta{margin-top:8px;display:flex;flex-wrap:wrap;gap:8px;color:var(--mut);font-size:12px}
+    .pill{border:var(--bd);padding:4px 8px;border-radius:999px;background:rgba(0,0,0,.18)}
+    .topline{display:flex;justify-content:space-between;gap:10px;align-items:flex-start}
+    .play{border:var(--bd);background:rgba(0,0,0,.22);padding:6px 10px;border-radius:999px;font-size:12px;color:var(--mut)}
+
+    /* pager */
+    .pager{display:flex;justify-content:space-between;align-items:center;gap:10px;margin:16px 0 4px}
+    .pbtn{
+      border:var(--bd);background:rgba(255,255,255,.06);color:var(--txt);
+      padding:10px 12px;border-radius:999px;cursor:pointer;min-width:92px;
+    }
+    .pbtn[disabled]{opacity:.4;cursor:not-allowed}
+    .pinfo{color:var(--mut);font-size:12px}
+
+    footer{
+      margin-top:18px;padding-top:14px;border-top:var(--bd);
+      color:var(--mut);font-size:12px;display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap
+    }
   </style>
 </head>
 <body>
-  <div class="bg"></div>
-  <div class="wrap">
-    <div class="top">
+  <div class="header">
+    <div class="bar">
       <div class="brand">
-        <div class="logo"></div>
-        <div>
-          <h1>Semua Video</h1>
-          <div class="sub" id="count">Loading…</div>
-        </div>
+        <div class="logo" aria-hidden="true"></div>
+        <div class="title">Narahentai</div>
       </div>
 
-      <div class="actions">
-        <div class="pill">
-          <span style="opacity:.75">🔎</span>
-          <input id="q" placeholder="Cari judul…" />
-        </div>
-        <a class="btn" href="/admin.html">Admin</a>
+      <div class="right">
+        <button class="iconbtn" id="btnSearch" title="Search" aria-label="Search">
+          <!-- magnifier -->
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <path d="M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/>
+            <path d="M21 21l-4.2-4.2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </button>
+        <a class="adminbtn" href="/admin.html">Admin</a>
       </div>
     </div>
 
-    <div id="grid" class="grid"></div>
-    <div id="empty" class="empty"></div>
+    <div class="searchWrap" id="searchWrap">
+      <div class="searchInner">
+        <div class="searchBox">
+          <span style="opacity:.75">🔎</span>
+          <input id="q" placeholder="Cari judul / slug…" />
+          <button class="iconbtn" id="btnGo" title="Go" aria-label="Go" style="width:36px;height:36px">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+              <path d="M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+              <path d="M13 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="wrap">
+    <div class="grid" id="grid"></div>
+
+    <div class="pager">
+      <button class="pbtn" id="prev">Prev</button>
+      <div class="pinfo" id="pinfo">Loading…</div>
+      <button class="pbtn" id="next">Next</button>
+    </div>
+
+    <footer>
+      <div>© <span id="year"></span> Narahentai</div>
+      <div>Built on Cloudflare Pages • Lightweight UI</div>
+    </footer>
   </div>
 
   <script>
-    let all = [];
+    const grid = document.getElementById("grid");
+    const pinfo = document.getElementById("pinfo");
+    const prevBtn = document.getElementById("prev");
+    const nextBtn = document.getElementById("next");
+    const qInput = document.getElementById("q");
+    const searchWrap = document.getElementById("searchWrap");
+    const btnSearch = document.getElementById("btnSearch");
+    const btnGo = document.getElementById("btnGo");
+
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    let page = 1;
+    let totalPages = 1;
+    let q = "";
 
     function esc(s){return (s||"").replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));}
     function fmt(iso){ try{return new Date(iso).toLocaleString("id-ID");}catch{return "";}}
 
-    function render(list){
-      const grid = document.getElementById("grid");
-      const empty = document.getElementById("empty");
-      document.getElementById("count").textContent = `${list.length} video`;
-
-      if (!list.length){
+    async function load(){
+      const url = `/api/posts?page=${page}&q=${encodeURIComponent(q)}`;
+      const res = await fetch(url, { cache: "no-store" });
+      if (!res.ok){
+        pinfo.textContent = `API error (${res.status})`;
         grid.innerHTML = "";
-        empty.textContent = "Belum ada video yang dipublish.";
         return;
       }
-      empty.textContent = "";
+      const data = await res.json();
+      totalPages = data.totalPages || 1;
 
-      grid.innerHTML = list.map(p => `
+      const items = data.items || [];
+      pinfo.textContent = `Page ${data.page || page} / ${totalPages} • ${data.total || 0} video`;
+
+      prevBtn.disabled = (page <= 1);
+      nextBtn.disabled = (page >= totalPages);
+
+      if (!items.length){
+        grid.innerHTML = `<div style="grid-column:1/-1;color:var(--mut);padding:10px 2px">Tidak ada hasil.</div>`;
+        return;
+      }
+
+      grid.innerHTML = items.map(p => `
         <a class="card" href="/watch.html?slug=${encodeURIComponent(p.slug)}">
-          <span class="chip">▶ Play</span>
           <img class="thumb" src="${p.thumbnail_url || ""}" alt="">
           <div class="pad">
-            <div class="title">${esc(p.title)}</div>
+            <div class="topline">
+              <div class="ctitle">${esc(p.title)}</div>
+              <div class="play">▶</div>
+            </div>
             <div class="meta">
-              <span>${esc(p.slug)}</span>
-              <span>${fmt(p.published_at || p.created_at)}</span>
+              <span class="pill">${(p.duration_minutes||0)} menit</span>
+              <span class="pill">${fmt(p.published_at || p.created_at)}</span>
+              <span class="pill">${(p.views||0)} views</span>
             </div>
           </div>
         </a>
       `).join("");
     }
 
-    async function main(){
-      const res = await fetch("/api/posts", { cache: "no-store" });
-      if (!res.ok){
-        document.getElementById("count").textContent = "API error";
-        document.getElementById("empty").textContent = `Gagal load /api/posts (${res.status}).`;
-        return;
-      }
-      all = await res.json();
-      render(all);
+    prevBtn.addEventListener("click", () => { if (page > 1) { page--; load(); window.scrollTo({top:0,behavior:"smooth"}); } });
+    nextBtn.addEventListener("click", () => { if (page < totalPages) { page++; load(); window.scrollTo({top:0,behavior:"smooth"}); } });
 
-      const q = document.getElementById("q");
-      q.addEventListener("input", () => {
-        const s = q.value.trim().toLowerCase();
-        if (!s) return render(all);
-        render(all.filter(p => (p.title||"").toLowerCase().includes(s) || (p.slug||"").toLowerCase().includes(s)));
-      });
+    // Search UI anim
+    btnSearch.addEventListener("click", () => {
+      searchWrap.classList.toggle("open");
+      if (searchWrap.classList.contains("open")) setTimeout(() => qInput.focus(), 80);
+    });
+
+    function doSearch(){
+      q = (qInput.value || "").trim();
+      page = 1;
+      load();
     }
+    btnGo.addEventListener("click", doSearch);
+    qInput.addEventListener("keydown", (e) => { if (e.key === "Enter") doSearch(); });
 
-    main();
+    load();
   </script>
 </body>
 </html>
