--- a/index.html
+++ b/index.html
@@ -115,15 +115,13 @@
             <path d="M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/>
             <path d="M21 21l-4.2-4.2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-        </button>
-        <a class="adminbtn" href="/admin.html">Admin</a>
       </div>
     </div>
 
     <div class="searchWrap" id="searchWrap">
       <div class="searchInner">
         <div class="searchBox">
-          <span style="opacity:.75">🔎</span>
+          <span style="opacity:.75"></span>
           <input id="q" placeholder="Cari judul / slug…" />
           <button class="iconbtn" id="btnGo" title="Go" aria-label="Go" style="width:36px;height:36px">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
@@ -147,7 +145,6 @@
 
     <footer>
       <div>© <span id="year"></span> Narahentai</div>
-      <div>Built on Cloudflare Pages • Lightweight UI</div>
     </footer>
   </div>
 
