--- a/admin.html
+++ b/admin.html
@@ -50,9 +50,7 @@
     <div class="top">
       <div>
         <h1>Admin</h1>
-        <div class="hint">Isi password → Refresh → edit / publish.</div>
       </div>
-      <a href="/">← Back</a>
     </div>
 
     <div class="grid">
@@ -69,19 +67,19 @@
 
         <div class="row2">
           <div>
-            <label>Slug (optional)</label>
+            <label>Slug</label>
             <input id="slug" placeholder="auto dari title" />
           </div>
           <div>
-            <label>Thumbnail URL (optional)</label>
+            <label>Thumbnail URL</label>
             <input id="thumb" placeholder="https://...jpg" />
           </div>
         </div>
 
-        <label>Video URL (mp4 / m3u8)</label>
+        <label>Video URL</label>
         <input id="video" placeholder="https://...mp4 atau ...m3u8" />
 
-        <label>Durasi (menit)</label>
+        <label>Durasi</label>
         <input id="dur" type="number" min="0" step="1" placeholder="contoh: 24" />
 
         <label>Description</label>
